# huokanadvertiserclient

./: .editorconfig  .gitignore  .isort.cfg  pyproject.toml
huokanadvertiserclient/: GUIApplication.py  main.py
huokanadvertiserclient/config/: Configuration.py
huokanadvertiserclient/core/: Core.py  DiscordOAuthListener.py
huokanadvertiserclient/core/apiutil/: GetGuildId.py
huokanadvertiserclient/core/depositlog/: DepositLogWatcher.py  SavedVariablesEventHandler.py  SavedVariablesWatcher.py
huokanadvertiserclient/core/depositlog/parser/: DepositLogParserException.py  DictToDataClass.py  LuaParser.py  Parser.py
huokanadvertiserclient/core/discord/: OAuthHandler.py  OAuthListener.py  OAuthServer.py
huokanadvertiserclient/core/login/: LoginHandler.py
huokanadvertiserclient/gui/: AddOn.py  DepositLogs.py  GuildBank.py  LoggedIn.py  Login.py  MainPanel.py  Modules.py  RootFrame.py  Settings.py  SystemTrayIcon.py  Version.py  WoWDirPicker.py
huokanadvertiserclient/gui/framework/: PanelSwitcher.py  ReactivePanel.py
huokanadvertiserclient/resources/: __init__.py
huokanadvertiserclient/state/: State.py
huokanclient/: main.py
huokanclient/config/: Configuration.py
huokanclient/gui/: AddOn.py  GuildBank.py  Modules.py  RootFrame.py  Settings.py  WoWDirPicker.py
tests/: test_huokanclient.py
