[tool.poetry]
name = "huokanclient"
version = "0.1.0"
description = ""
authors = ["Kyle Scheuing <kyle@kylescheuing.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wxPython = "^4.1.1"
Rx = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
