[tool.poetry]
name = "huokanadvertiserclient"
version = "0.1.0"
description = ""
authors = ["Kyle Scheuing <kyle@kylescheuing.com>"]

[tool.poetry.dependencies]
python = "^3.9"
wxPython = "^4.1.1"
Rx = "^3.2.0"
httpx = "^0.21.1"
python-dateutil = "^2.8.2"
huokanapiclient = { git = "git@github.com:Huokan/huokanapiclient-python.git" }
watchdog = "^2.1.6"
SLPP = "^1.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = { version = "^21.12b0", allow-prereleases = true }
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
